# web_watchr

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
api/: index.html
docs/: api.md  index.md
examples/: simple_poll_example.py  simple_telegram_alerting.py
search/: search_index.json
src/web_watchr/: __init__.py  watchr.py
src/web_watchr/alert/: __init__.py  abstract_alerter.py  print_alerter.py  telegram_alerter.py
src/web_watchr/compare/: __init__.py  abstract_comparer.py  dummy_comparer.py  fs_comparer.py
src/website_monitoring_bot/compare/: fs_comparer.py
src/website_monitoring_bot/poll/: poll.py
test/: conftest.py
test/data/: test.html
test/web_watchr/: test_watchr.py
test/web_watchr/alert/: test_std_out_alerter.py  test_telegram_alerter.py
test/web_watchr/compare/: test_dummy_comparer.py  test_fs_comparer.py
test/website_monitoring_bot/compare/: test_fs_comparer.py
test/website_monitoring_bot/poll/: test_poll.py
