[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_watchr"
authors = [{ name = "Tim Adler", email = "tim+github@emrys-merlin.de" }]
description = "Monitors a website for changes in a text element and publishes an alert (e.g., on telegram)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bot", "scraping", "telegram"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "python-telegram-bot==21.1",
    "pydantic==2.7.0",
    "loguru==0.7.2",
    "playwright==1.46.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "mypy",
    "ipdb",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
all = ["web_watchr[dev,docs]"]

[tool.hatch.version]
path = "src/web_watchr/__init__.py"

# [project.scripts]
# my-script = "my_package.module:function"

[tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
testpaths = ["test"]

[project.urls]
Homepage = "https://github.com/Emrys-Merlin/web_watchr"
Documentation = "https://Emrys-Merlin.github.io/website_monitoring_bot/"
Repository = "https://github.com/Emrys-Merlin/web_watchr.git"
"Bug Tracker" = "https://github.com/Emrys-Merlin/web_watchr/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
