[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_watchr"
authors = [{ name = "Tim Adler", email = "tim+github@emrys-merlin.de" }]
description = "Monitors a website for changes in a text element and publishes an alert (e.g., on telegram)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bot", "scraping", "telegram"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "python-telegram-bot==21.6",
    "pydantic==2.9.2",
    "loguru==0.7.2",
    "playwright==1.47.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "mypy",
    "ipdb",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
all = ["web_watchr[dev,docs]"]

[tool.hatch.version]
path = "src/web_watchr/__init__.py"

# [project.scripts]
# my-script = "my_package.module:function"

[tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
testpaths = ["test"]

[project.urls]
Homepage = "https://github.com/Emrys-Merlin/web_watchr"
Documentation = "https://Emrys-Merlin.github.io/web_watchr/"
Repository = "https://github.com/Emrys-Merlin/web_watchr.git"
"Bug Tracker" = "https://github.com/Emrys-Merlin/web_watchr/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.semantic_release]
version_variable = [
    "src/web_watchr/__init__.py:__version__"
]
major_on_zero = true
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "make setup-ci && make build"
