[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_watchr"
authors = [{ name = "Tim Adler", email = "tim+github@emrys-merlin.de" }]
description = "Monitors a website for changes in a text element and publishes an alert (e.g., on telegram)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bot", "scraping", "telegram"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-telegram-bot==22.0",
    "pydantic==2.11.1",
    "loguru==0.7.3",
    "playwright==1.51.0",
]
dynamic = ["version"]

# [project.optional-dependencies]

[tool.hatch.version]
path = "src/web_watchr/__init__.py"

# [project.scripts]
# my-script = "my_package.module:function"

[tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
testpaths = ["test"]

[project.urls]
Homepage = "https://github.com/Emrys-Merlin/web_watchr"
Documentation = "https://Emrys-Merlin.github.io/web_watchr/"
Repository = "https://github.com/Emrys-Merlin/web_watchr.git"
"Bug Tracker" = "https://github.com/Emrys-Merlin/web_watchr/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.uv]
default-groups = ["dev", "docs"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "mypy",
    "ipdb",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
